--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -46,6 +46,10 @@ body {
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
+body a {
+    color: #d32f2f;
+}
+
 .cover-container {
     max-width: 42em;
 }
