--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -43,11 +43,11 @@ body {
     display: flex;
     color: #333;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+    /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5); */
 }
 
 body a {
-    color: #d32f2f;
+    color: #1ba6f5;
 }
 
 .cover-container {
@@ -79,8 +79,8 @@ body a {
 }
 
 .nav-masthead .active {
-    color: #000;
-    border-bottom-color: #000;
+    color: #1ba6f5;
+    border-bottom-color: #1ba6f5;
 }
 
 @media (min-width: 48em) {
